--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".signup"></activity>
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,12 +19,7 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/AppThemeLogin"></activity>
-        <activity android:name=".MainActivity"
-            android:theme="@style/AppThemeMain">
-
-        </activity>
+            android:theme="@style/AppThemeLogin" />
     </application>
-
 
 </manifest>
